--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TypeScript Tutorial</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="app.js"></script>
+    <link rel="stylesheet" href="public/styles.css" />
+    <script type="module" src="public/app.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -37,8 +37,6 @@
         </div>
         <button>Add</button>
       </form>
-
-      <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
     </footer>
   </body>
 </html>
