--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TypeScript Tutorial</title>
+    <title>Finance Logger</title>
     <link rel="stylesheet" href="public/styles.css" />
     <script type="module" src="public/app.js"></script>
   </head>
